<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:visibility="visible">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_youtube"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/margin_small"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <WebView
            android:id="@+id/wv_youtube"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_titleFilm_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_youtube"
        tools:text="Wonder Woman" />

    <TextView
        android:id="@+id/tv_categoryFilm_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titleFilm_detail"
        tools:text="Action | Science Fiction - 2h 21m" />

    <TextView
        android:id="@+id/tv_ratingFilm_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/bg_rating_detail"
        android:paddingHorizontal="@dimen/margin_medium"
        android:paddingVertical="@dimen/margin_extra_small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categoryFilm_detail"
        tools:text="8.9" />

    <TextView
        android:id="@+id/tv_descriptionFilm_detail"
        style="@style/AppTheme.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ratingFilm_detail"
        tools:text="@tools:sample/lorem/random" />

</androidx.constraintlayout.widget.ConstraintLayout>