<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/baseline_upcoming_24"
        android:title="@string/upcoming" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/ic_watchlist"
        android:title="@string/watchlist" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_4_24"
        android:title="@string/profile" />
</menu>